Switched to 1.9.3 and fixed an encoding issue when converting to json within resque

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,8 +1,8 @@
 To run:
 -------
 
-  $ rvm gemset create resque_spike
-  $ rvm gemset use resque_spike
+Automatically creates a gemset and uses it via RVM. Currently using 1.9.3 for help with encoding. 
+
   $ gem install bundler
   $ bundle
   $ rake db:migrate
@@ -35,3 +35,9 @@ Notes:
 The 10 end_point workers do not load the rails env to save on memory. With the rails env these workers were about 51mb, without they are 14mb. So over all the workers that is a saving of 370mb or RAM.
 
 The 3 response_queue workers do load the rails env as they use AR to save the results. This queue is not time sensitive and is fast to process so less workers is fine.
+
+To Do:
+------
+
+* Fix the encoding conversion issue for some responses (body I think) with the error: Encoding::UndefinedConversionError "\xE2" from ASCII-8BIT to UTF-8
+* 3 of the test urls are not added to the db. The console reports: rake aborted! redundant UTF-8 sequence 3 times for the response_queue
